<resources>
    <string name="app_name">Mr. Driver</string>
    <string name="Tutorial">tutorial</string>
    <string name="week">Week %s</string>
    <!--    FRAGMENTS    -->
    <string name="spotify">Spotify</string>
    <string name="dashcam">Dashcam</string>
    <string name="maps">Maps</string>
    <string name="obd2">OBD2</string>
    <string name="infoscreen">Infoscreen</string>
    <string name="weather">Weather</string>
    <string name="phone">Phone</string>
    <string name="navigation">Navigation</string>
    <!--    MAPS    -->
    <string name="compass">Compass</string>
    <string name="bearing">%s\n %d°</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="directions">Directions</string>
    <string name="destination">Destination</string>
    <string name="locations">Locations</string>
    <string name="search">Search</string>
    <string name="route">Route</string>
    <!--    SPOTIFY    -->
    <string name="command_feedback">"'%1$s' command successful!"</string>
    <string name="command_response">"'%1$s' command response"</string>
    <string name="browse_content">Browse Content</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="song">Song</string>
    <string name="playlists">Playlists</string>
    <!--    WEATHER    -->
    <string name="weather_icon">Weather Icon</string>
    <string name="temperature">%d°</string>
    <string name="feels_temp">Feels %d°</string>
    <string name="clouds">%d%% %s</string>
    <string name="wind">%.1fms\n%d°(%s)\n%s</string>
    <string name="minmax_temp">Max %.1f°\nMin %.1f°\nRain %.1fmm</string>
    <string name="minmax_daily">%1$.0f°-%2$.0f°</string>
    <string name="wind_daily">%1$s(%2$s)</string>
    <string name="press_humid">%1$d Bar\nHum %2$d%%\nDew %3$d°</string>
    <string name="sunrise_sunset">Rise %s\nSet %s\nUVI %.1f</string>
    <string name="current_weather">Current Weather</string>
    <string name="hourly_weather">Hourly Weather</string>
    <string name="daily_weather">Daily Weather</string>
    <!--    OBD2    -->
    <string name="speed">Speed: %s km/h</string>
    <string name="rpm">RPM: %s</string>
    <string name="oilTemp">Oil Temp: %s</string>
    <string name="fuelLevel">Fuel: %s</string>
    <string name="consumption">Consumption: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>