<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/iconbar"
    android:layout_width="@dimen/big_icon"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/btn_settings"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dashcam"
        android:scaleType="fitCenter"
        android:src="@drawable/fic_settings" />

    <ImageView
        android:id="@+id/btn_camera"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dashcam"
        android:scaleType="fitCenter"
        android:src="@drawable/fic_camera" />

    <ImageView
        android:id="@+id/btn_phone"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/phone"
        android:scaleType="fitCenter"
        android:src="@drawable/fic_phone" />

    <ImageView
        android:id="@+id/btn_obd2"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/obd2"
        android:scaleType="fitCenter"
        android:src="@drawable/fic_obd2" />

    <ImageView
        android:id="@+id/btn_spotify"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/spotify"
        android:scaleType="fitCenter"
        android:src="@drawable/fic_music" />

    <ImageView
        android:id="@+id/btn_weather"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/weather"
        android:scaleType="fitCenter"
        android:src="@drawable/fic_sunny" />

    <ImageView
        android:id="@+id/btn_navigation"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/navigation"
        android:scaleType="fitCenter"
        android:src="@drawable/fic_navigation" />

    <ImageView
        android:id="@+id/img_fullscreen"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/fullscreen"
        android:scaleType="fitCenter"
        android:src="@drawable/fic_fullscreen_100dp" />

</TableLayout>
