<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Thursday 18. August"
        android:textSize="@dimen/h4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_date">

        <ImageView
            android:id="@+id/img_weather"
            android:layout_width="@dimen/big_icon"
            android:layout_height="@dimen/big_icon"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/weather_icon"
            android:scaleType="fitCenter"
            android:src="@drawable/wic_11d_day_rain_thunder" />

        <ImageView
            android:layout_width="@dimen/medium_icon"
            android:layout_height="@dimen/medium_icon"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:contentDescription="@string/minmax_temp"
            android:scaleType="fitCenter"
            android:src="@drawable/wic_tempminmax_64dp" />

        <TextView
            android:id="@+id/txt_low_high_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="end"
            android:text="@string/temperature"
            android:textSize="@dimen/h3" />
    </LinearLayout>
</RelativeLayout>