<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/big_icon"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/temperature"
                android:src="@drawable/wic_tempminmax_64dp" />

            <TextView
                android:id="@+id/txt_low_high_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="@dimen/h4" />
        </RelativeLayout>

        <View style="@style/Divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/big_icon"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/wind"
                android:src="@drawable/wic_windflag_64dp" />

            <TextView
                android:id="@+id/txt_wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="@dimen/h4" />
        </RelativeLayout>

        <View style="@style/Divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/big_icon"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/sunrise_sunset"
                android:src="@drawable/wic_sunrise_dawn_64dp" />

            <TextView
                android:id="@+id/txt_sunrise_sunset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="@dimen/h4" />
        </RelativeLayout>

        <View style="@style/Divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/big_icon"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/press_humid"
                android:src="@drawable/wic_humiditypressure_64dp" />

            <TextView
                android:id="@+id/txt_pressure_humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="@dimen/h4" />
        </RelativeLayout>
    </TableLayout>
</ScrollView>