<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpotifyFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:src="@drawable/album" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/sic_playlist_play_black_64dp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/sic_library_music_black_64dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/sic_album_black_48dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/sic_account_circle_black_48dp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/play_pause_button_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:src="@drawable/sic_play_stroke_128dp" />

    <LinearLayout
        android:id="@+id/lay_big"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/draw_rounded_corners"
            android:padding="5dp"
            android:text="@string/artist"
            android:textSize="@dimen/h5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/draw_rounded_corners"
            android:padding="5dp"
            android:text="@string/album"
            android:textSize="@dimen/h5" />

        <LinearLayout
            android:id="@+id/lay_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/skip_prev_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/draw_rounded_corners"
                android:src="@drawable/sic_skip_previous_48dp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/play_pause_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/draw_rounded_corners"
                android:src="@drawable/sic_play_48dp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/skip_next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/draw_rounded_corners"
                android:src="@drawable/sic_skip_next_48dp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seek_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:thumb="@drawable/sic_play_button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seek_to"
        android:layout_centerHorizontal="true"
        android:background="@drawable/draw_rounded_corners"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:paddingBottom="3dp"
        android:text="@string/song"
        android:textSize="@dimen/h5" />

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="2"
        android:visibility="invisible" />


</RelativeLayout>