<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapFragment">

    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:mapType="hybrid" />

    <NumberPicker
        android:id="@+id/np_tilt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:textColor="?colorAccent"
        android:theme="@style/NumberPickerText" />

    <TextView
        android:id="@+id/txt_tilt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/np_tilt"
        android:drawableStart="@drawable/ic_tilt"
        android:textColor="?colorAccent"
        android:textSize="@dimen/h3" />

    <NumberPicker
        android:id="@+id/np_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:textColor="?colorAccent"
        android:theme="@style/NumberPickerText" />

    <TextView
        android:id="@+id/txt_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/np_zoom"
        android:layout_alignParentEnd="true"
        android:drawableEnd="@drawable/ic_zoom"
        android:textColor="?colorAccent"
        android:textSize="@dimen/h3" />

    <ImageView
        android:id="@+id/img_directions"
        android:layout_width="@dimen/big_icon"
        android:layout_height="@dimen/big_icon"
        android:layout_margin="20dp"
        android:contentDescription="@string/directions"
        android:src="@drawable/mic_directions_200dp" />

    <ImageView
        android:id="@+id/img_fullscreen"
        android:layout_width="@dimen/big_icon"
        android:layout_height="@dimen/big_icon"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/fullscreen"
        android:src="@drawable/ic_fullscreen_black_68dp" />

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/img_directions"
        android:layout_marginTop="50dp"
        android:layout_toStartOf="@id/img_fullscreen"
        android:layout_toEndOf="@id/img_directions"
        android:orientation="vertical"
        android:visibility="visible">

        <!--        <AutoCompleteTextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:id="@+id/input_search"-->
        <!--            android:textSize="@dimen/h4"-->
        <!--            android:background="@drawable/draw_rounded_corners"-->
        <!--            android:padding="@dimen/h4"-->
        <!--            android:completionThreshold="1"-->
        <!--            android:popupTheme="@style/AppTheme_Day"-->
        <!--            />-->

        <!--        <TextView-->
        <!--            android:id="@+id/txt_results"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"/>-->

        <EditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/draw_rounded_corners"
            android:imeOptions="actionDone"
            android:inputType="textImeMultiLine"
            android:textSize="@dimen/h4" />

        <ListView
            android:id="@+id/listview_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/draw_rounded_corners" />

    </LinearLayout>
    <!--COMPASS-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp">

        <ImageView
            android:id="@+id/img_compass"
            android:layout_width="@dimen/big_icon"
            android:layout_height="@dimen/big_icon"
            android:contentDescription="@string/compass"
            android:src="@drawable/mic_compass_200dp" />

        <TextView
            android:id="@+id/txt_bearing1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/h4"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_speed"
        android:layout_width="@dimen/big_icon"
        android:layout_height="@dimen/big_icon"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:background="@drawable/mic_speedsign"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/h3"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/draw_rounded_corners"
        android:padding="5dp"
        android:textSize="@dimen/h3" />

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/h3" />

</RelativeLayout>
